--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Pass Generator</title>
 </head>
 
@@ -17,7 +20,7 @@
 
             </div>
             <button class="copy__btn" id="copy-btn">
-
+                <i class="far fa-copy"></i>
             </button>
         </header>
         <main>
@@ -42,6 +45,7 @@
                     <label for="symbols">including symbols</label>
                     <input type="checkbox" name="" id="symbols">
                 </div>
+                <button class="generate__btn">Generate</button>
             </form>
         </main>
     </div>
