--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <form>
                 <div class="option__box">
                     <label for="length">length: </label>
-                    <input type="number" name="" id="lenght" min="8" max="20">
+                    <input type="number" value="10" name="" id="lenght" min="8" max="20">
                 </div>
                 <div class="option__box">
                     <label for="uppercase">including UPPERCASE </label>
-                    <input type="checkbox" name="" id="uppercase">
+                    <input type="checkbox" checked name="" id="uppercase">
                 </div>
                 <div class="option__box">
                     <label for="lowercase">including lowercase</label>
-                    <input type="checkbox" name="" id="lowercase">
+                    <input type="checkbox" checked name="" id="lowercase">
                 </div>
                 <div class="option__box">
                     <label for="numbers">including numbers</label>
