generating-password section is done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <form>
                 <div class="option__box">
                     <label for="length">length: </label>
-                    <input type="number" value="10" name="" id="lenght" min="8" max="20">
+                    <input type="number" value="10" name="" id="length" min="8" max="20">
                 </div>
                 <div class="option__box">
                     <label for="uppercase">including UPPERCASE </label>
